# xcp-ng-xapi-storage

./: CMakeLists.txt  README.md  setup.py
daemons/qemuback/: qemuback.py  qemuback.service  xapi-qemuback.conf
plugins/datapath/fspdisk/: datapath.py  plugin.py
plugins/datapath/qdisk/: datapath.py  plugin.py
plugins/datapath/tapdisk/: datapath.py  plugin.py
plugins/volume/org.xen.xapi.storage.ext4-ng/: ext4-ng.py  plugin.py  sr.py  volume.py
plugins/volume/org.xen.xapi.storage.filebased/: plugin.py  sr.py  volume.py
plugins/volume/org.xen.xapi.storage.fsp/: fsp.py  plugin.py  sr.py  volume.py
plugins/volume/org.xen.xapi.storage.nfs-ng/: nfs-ng.py  plugin.py  sr.py  volume.py
plugins/volume/org.xen.xapi.storage.raw-device/: plugin.py  raw-device.py  sr.py  volume.py
plugins/volume/org.xen.xapi.storage.zfs-ng/: plugin.py  sr.py  volume.py  zfs-ng.py  zfsutils.py
plugins/volume/org.xen.xapi.storage.zfs-vol/: plugin.py  sr.py  volume.py  zfs-vol.py  zfsutils.py
usr/libexec/xapi-storage-script/datapath/: raw+file
usr/libexec/xapi-storage-script/datapath/qdisk/: datapath.py  datapath.pyo  plugin.py
usr/libexec/xapi-storage-script/datapath/tapdisk/: plugin.py
usr/libexec/xapi-storage-script/datapath/vhd+tapdisk/: datapath.py  datapath.pyo  plugin.py
usr/libexec/xapi-storage-script/volume/org.xen.xapi.storage.ext4-ng/: sr.py  volume.py
usr/libexec/xapi-storage-script/volume/org.xen.xapi.storage.filebased/: filebased.py  filebased.pyo  plugin.py  sr.py  volume.py  volume.pyo
usr/libexec/xapi-storage-script/volume/org.xen.xapi.storage.gfs2/: database.py  database.pyo  dlm_monitor.py  gfs2.py  gfs2.pyo  plugin.py  sr.py  stats.py  stats.pyo  volume.py
usr/libexec/xapi-storage-script/volume/org.xen.xapi.storage.nfs-ng/: nfs-ng.py  nfs-ng.pyo  plugin.py  sr.py  sr.pyo  volume.py
usr/libexec/xapi/cluster-stack/corosync/: corosync_ha_master_lock.py  csha.py  csha.pyo  ha_clear_excluded  ha_disarm_fencing  ha_propose_master  ha_query_liveset  ha_set_excluded  ha_set_pool_state  ha_start_daemon  ha_stop_daemon
usr/share/doc/xapi-storage-plugins-1.6.0/: README.md
usr/share/doc/xcp-ng-xapi-storage-1.0.0/: README.md
xapi/storage/libs/: image.py  libdlm.py  nbdclient.py  qemudisk.py  qmp.py  refcounter.py  tapdisk.py  util.py
xapi/storage/libs/libcow/: callbacks.py  coalesce.py  cowutil.py  datapath.py  db_backup.py  fsputil.py  imageformat.py  lock.py  metabase.py  qcow2util.py  rawutil.py  reflinkutil.py  volume.py  volume_implementation.py  zfsutil.py
xapi/storage/libs/rrddlib/: backend.py  control.py  datasource.py
